Fix line break for too long highlighted code.

--- a/src/main/webapp/resources/sass/app/components/_highlighter.scss
+++ b/src/main/webapp/resources/sass/app/components/_highlighter.scss
@@ -33,6 +33,7 @@ Original style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiac
 .hljs-pre {
 	display: table;
 	background-color: white;
+	padding-right: 1.5em;
 }
 
 .hljs-highlight {
